# cooking-log

./: .gitignore  README.md  app.py  dashboard.py  pyproject.toml
app/: load_data.py  pyproject.toml  streamlit_app.py  utils.py
app/tests/: test_utils.py
src/: calculate_distances.py  clean.py  config.py  dedupe.py  find_cliques.py  format_cliques.py  language_detector.py  parse.py  parse_entries.py  parser.py  pipeline.py  process.py  process_entries.py  text_processor.py
