[project]
name = "cooking-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "lingua-language-detector>=2.1.1",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "pandas>=2.3.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
