[project]
name = "cooking-log"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "fast-langdetect>=1.0.0",
    "fastparquet>=2024.11.0",
    "lingua-language-detector>=2.1.1",
    "pandas>=2.3.1",
    "spacy==3.8.2",
    "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "ruff>=0.12.8",
]
